sgr update
